--- a/systemtest/approvals/TestAgentConfig.approved.json
+++ b/systemtest/approvals/TestAgentConfig.approved.json
@@ -3,9 +3,14 @@
         {
             "@timestamp": "dynamic",
             "agent_config_applied": 1,
-            "data_stream.dataset": "apm.internal",
-            "data_stream.namespace": "default",
-            "data_stream.type": "metrics",
+            "data_stream": {
+                "dataset": "apm.internal",
+                "namespace": "default",
+                "type": "metrics"
+            },
+            "ecs": {
+                "version": "dynamic"
+            },
             "event": {
                 "agent_id_status": "missing",
                 "ingested": "dynamic"
@@ -13,7 +18,9 @@
             "labels": {
                 "etag": "dynamic"
             },
-            "metricset.name": "agent_config",
+            "metricset": {
+                "name": "agent_config"
+            },
             "observer": {
                 "hostname": "dynamic",
                 "type": "apm-server",
