--- a/systemtest/approvals/TestApprovedMetrics.approved.json
+++ b/systemtest/approvals/TestApprovedMetrics.approved.json
@@ -6,23 +6,36 @@
                 "name": "elastic-node",
                 "version": "3.14.0"
             },
-            "data_stream.dataset": "apm.app.1234_service_12a3",
-            "data_stream.namespace": "default",
-            "data_stream.type": "metrics",
+            "data_stream": {
+                "dataset": "apm.app.1234_service_12a3",
+                "namespace": "default",
+                "type": "metrics"
+            },
+            "ecs": {
+                "version": "dynamic"
+            },
             "event": {
                 "agent_id_status": "missing",
                 "ingested": "dynamic"
             },
-            "go.memstats.heap.sys.bytes": 6520832,
+            "go": {
+                "memstats": {
+                    "heap": {
+                        "sys": {
+                            "bytes": 6520832
+                        }
+                    }
+                }
+            },
             "host": {
-                "ip": [
-                    "127.0.0.1"
-                ]
+                "ip": "127.0.0.1"
             },
             "labels": {
                 "tag1": "one"
             },
-            "metricset.name": "app",
+            "metricset": {
+                "name": "app"
+            },
             "numeric_labels": {
                 "tag2": 2
             },
@@ -59,22 +72,27 @@
                 "name": "elastic-node",
                 "version": "3.14.0"
             },
-            "data_stream.dataset": "apm.internal",
-            "data_stream.namespace": "default",
-            "data_stream.type": "metrics",
+            "data_stream": {
+                "dataset": "apm.internal",
+                "namespace": "default",
+                "type": "metrics"
+            },
+            "ecs": {
+                "version": "dynamic"
+            },
             "event": {
                 "agent_id_status": "missing",
                 "ingested": "dynamic"
             },
             "host": {
-                "ip": [
-                    "127.0.0.1"
-                ]
+                "ip": "127.0.0.1"
             },
             "labels": {
                 "tag1": "one"
             },
-            "metricset.name": "app",
+            "metricset": {
+                "name": "app"
+            },
             "numeric_labels": {
                 "tag2": 2
             },
@@ -99,8 +117,22 @@
                     "name": "node-1"
                 }
             },
-            "system.process.cgroup.memory.mem.limit.bytes": 2048,
-            "system.process.cgroup.memory.mem.usage.bytes": 1024,
+            "system": {
+                "process": {
+                    "cgroup": {
+                        "memory": {
+                            "mem": {
+                                "limit": {
+                                    "bytes": 2048
+                                },
+                                "usage": {
+                                    "bytes": 1024
+                                }
+                            }
+                        }
+                    }
+                }
+            },
             "user": {
                 "email": "user@mail.com",
                 "id": "axb123hg",
@@ -113,22 +145,27 @@
                 "name": "elastic-node",
                 "version": "3.14.0"
             },
-            "data_stream.dataset": "apm.app.1234_service_12a3",
-            "data_stream.namespace": "default",
-            "data_stream.type": "metrics",
+            "data_stream": {
+                "dataset": "apm.app.1234_service_12a3",
+                "namespace": "default",
+                "type": "metrics"
+            },
+            "ecs": {
+                "version": "dynamic"
+            },
             "event": {
                 "agent_id_status": "missing",
                 "ingested": "dynamic"
             },
             "host": {
-                "ip": [
-                    "127.0.0.1"
-                ]
+                "ip": "127.0.0.1"
             },
             "labels": {
                 "tag1": "one"
             },
-            "metricset.name": "app",
+            "metricset": {
+                "name": "app"
+            },
             "numeric_labels": {
                 "tag2": 2
             },
@@ -153,14 +190,36 @@
                     "name": "node-1"
                 }
             },
-            "system.process.cgroup.cpu.cfs.period.us": 1024,
-            "system.process.cgroup.cpu.cfs.quota.us": 2048,
-            "system.process.cgroup.cpu.id": 2048,
-            "system.process.cgroup.cpu.stats.periods": 2048,
-            "system.process.cgroup.cpu.stats.throttled.ns": 2048,
-            "system.process.cgroup.cpu.stats.throttled.periods": 2048,
-            "system.process.cgroup.cpuacct.id": 2048,
-            "system.process.cgroup.cpuacct.total.ns": 2048,
+            "system": {
+                "process": {
+                    "cgroup": {
+                        "cpu": {
+                            "cfs": {
+                                "period": {
+                                    "us": 1024
+                                },
+                                "quota": {
+                                    "us": 2048
+                                }
+                            },
+                            "id": 2048,
+                            "stats": {
+                                "periods": 2048,
+                                "throttled": {
+                                    "ns": 2048,
+                                    "periods": 2048
+                                }
+                            }
+                        },
+                        "cpuacct": {
+                            "id": 2048,
+                            "total": {
+                                "ns": 2048
+                            }
+                        }
+                    }
+                }
+            },
             "user": {
                 "email": "user@mail.com",
                 "id": "axb123hg",
@@ -173,17 +232,20 @@
                 "name": "elastic-node",
                 "version": "3.14.0"
             },
-            "data_stream.dataset": "apm.app.1234_service_12a3",
-            "data_stream.namespace": "default",
-            "data_stream.type": "metrics",
+            "data_stream": {
+                "dataset": "apm.app.1234_service_12a3",
+                "namespace": "default",
+                "type": "metrics"
+            },
+            "ecs": {
+                "version": "dynamic"
+            },
             "event": {
                 "agent_id_status": "missing",
                 "ingested": "dynamic"
             },
             "host": {
-                "ip": [
-                    "127.0.0.1"
-                ]
+                "ip": "127.0.0.1"
             },
             "labels": {
                 "tag1": "one"
@@ -200,7 +262,9 @@
                     3.3
                 ]
             },
-            "metricset.name": "app",
+            "metricset": {
+                "name": "app"
+            },
             "numeric_labels": {
                 "tag2": 2
             },
@@ -237,31 +301,36 @@
                 "name": "elastic-node",
                 "version": "3.14.0"
             },
-            "data_stream.dataset": "apm.internal",
-            "data_stream.namespace": "default",
-            "data_stream.type": "metrics",
+            "data_stream": {
+                "dataset": "apm.internal",
+                "namespace": "default",
+                "type": "metrics"
+            },
+            "ecs": {
+                "version": "dynamic"
+            },
             "event": {
                 "agent_id_status": "missing",
                 "ingested": "dynamic"
             },
             "faas": {
+                "billed_duration": 183,
                 "coldstart": true,
+                "coldstart_duration": 422.97,
+                "duration": 182.43,
                 "execution": "6f7f0961f83442118a7af6fe80b88d56",
-                "id": "arn:aws:lambda:us-east-2:123456789012:function:custom-runtime"
+                "id": "arn:aws:lambda:us-east-2:123456789012:function:custom-runtime",
+                "timeout": 5000
             },
-            "faas.billed_duration": 183,
-            "faas.coldstart_duration": 422.9700012207031,
-            "faas.duration": 182.42999267578125,
-            "faas.timeout": 5000,
             "host": {
-                "ip": [
-                    "127.0.0.1"
-                ]
+                "ip": "127.0.0.1"
             },
             "labels": {
                 "tag1": "one"
             },
-            "metricset.name": "app",
+            "metricset": {
+                "name": "app"
+            },
             "numeric_labels": {
                 "tag2": 2
             },
@@ -286,8 +355,14 @@
                     "name": "node-1"
                 }
             },
-            "system.memory.actual.free": 54525952,
-            "system.memory.total": 134217728,
+            "system": {
+                "memory": {
+                    "actual": {
+                        "free": 54525952
+                    },
+                    "total": 134217728
+                }
+            },
             "user": {
                 "email": "user@mail.com",
                 "id": "axb123hg",
@@ -300,24 +375,29 @@
                 "name": "elastic-node",
                 "version": "3.14.0"
             },
-            "data_stream.dataset": "apm.internal",
-            "data_stream.namespace": "default",
-            "data_stream.type": "metrics",
+            "data_stream": {
+                "dataset": "apm.internal",
+                "namespace": "default",
+                "type": "metrics"
+            },
+            "ecs": {
+                "version": "dynamic"
+            },
             "event": {
                 "agent_id_status": "missing",
                 "ingested": "dynamic"
             },
             "host": {
-                "ip": [
-                    "127.0.0.1"
-                ]
+                "ip": "127.0.0.1"
             },
             "labels": {
                 "some": "abc",
                 "success": "true",
                 "tag1": "one"
             },
-            "metricset.name": "span_breakdown",
+            "metricset": {
+                "name": "span_breakdown"
+            },
             "numeric_labels": {
                 "code": 200,
                 "tag2": 2
@@ -346,7 +426,9 @@
             "span": {
                 "self_time": {
                     "count": 1,
-                    "sum.us": 633
+                    "sum": {
+                        "us": 633
+                    }
                 },
                 "subtype": "mysql",
                 "type": "db"
