--- a/systemtest/approvals/TestIngestPipelineDataStreamMigration.approved.json
+++ b/systemtest/approvals/TestIngestPipelineDataStreamMigration.approved.json
@@ -149,26 +149,41 @@
                 "namespace": "migrated",
                 "type": "metrics"
             },
+            "ecs": {
+                "version": "dynamic"
+            },
             "event": {
                 "agent_id_status": "missing",
                 "ingested": "dynamic"
             },
-            "golang.goroutines": 11,
-            "golang.heap.allocations.active": 6160384,
-            "golang.heap.allocations.allocated": 4579688,
-            "golang.heap.allocations.frees": 39979,
-            "golang.heap.allocations.idle": 5701632,
-            "golang.heap.allocations.mallocs": 44520,
-            "golang.heap.allocations.objects": 4541,
-            "golang.heap.allocations.total": 8834120,
-            "golang.heap.gc.cpu_fraction": 0.00031759519816489074,
-            "golang.heap.gc.next_gc_limit": 8842488,
-            "golang.heap.gc.total_count": 3,
-            "golang.heap.gc.total_pause.ns": 178493,
-            "golang.heap.system.obtained": 11862016,
-            "golang.heap.system.released": 3989504,
-            "golang.heap.system.stack": 720896,
-            "golang.heap.system.total": 20268040,
+            "golang": {
+                "goroutines": 11,
+                "heap": {
+                    "allocations": {
+                        "active": 6160384,
+                        "allocated": 4579688,
+                        "frees": 39979,
+                        "idle": 5701632,
+                        "mallocs": 44520,
+                        "objects": 4541,
+                        "total": 8834120
+                    },
+                    "gc": {
+                        "cpu_fraction": 0.0003175952,
+                        "next_gc_limit": 8842488,
+                        "total_count": 3,
+                        "total_pause": {
+                            "ns": 178493
+                        }
+                    },
+                    "system": {
+                        "obtained": 11862016,
+                        "released": 3989504,
+                        "stack": 720896,
+                        "total": 20268040
+                    }
+                }
+            },
             "host": {
                 "architecture": "amd64",
                 "hostname": "corduroy",
@@ -178,7 +193,9 @@
                     "platform": "linux"
                 }
             },
-            "metricset.name": "app",
+            "metricset": {
+                "name": "app"
+            },
             "observer": {
                 "hostname": "dynamic",
                 "name": "instance-0000000000",
@@ -186,9 +203,7 @@
                 "version": "dynamic"
             },
             "process": {
-                "args": [
-                    "/tmp/go-build1405913256/b001/exe/main"
-                ],
+                "args": "/tmp/go-build1405913256/b001/exe/main",
                 "parent": {
                     "pid": 4009763
                 },
@@ -213,12 +228,36 @@
                     "version": "go1.18.1"
                 }
             },
-            "system.cpu.total.norm.pct": 0.022556390977443663,
-            "system.memory.actual.free": 33981652992,
-            "system.memory.total": 46108971008,
-            "system.process.cpu.total.norm.pct": 0.002506265664160401,
-            "system.process.memory.rss.bytes": 15187968,
-            "system.process.memory.size": 1485594624
+            "system": {
+                "cpu": {
+                    "total": {
+                        "norm": {
+                            "pct": 0.02255639
+                        }
+                    }
+                },
+                "memory": {
+                    "actual": {
+                        "free": 33981653000
+                    },
+                    "total": 46108970000
+                },
+                "process": {
+                    "cpu": {
+                        "total": {
+                            "norm": {
+                                "pct": 0.0025062656
+                            }
+                        }
+                    },
+                    "memory": {
+                        "rss": {
+                            "bytes": 15187968
+                        },
+                        "size": 1485594600
+                    }
+                }
+            }
         },
         {
             "@timestamp": "2022-09-12T03:52:00.000Z",
@@ -230,12 +269,17 @@
                 "namespace": "migrated",
                 "type": "metrics"
             },
+            "ecs": {
+                "version": "dynamic"
+            },
             "event": {
                 "agent_id_status": "missing",
                 "ingested": "dynamic",
                 "outcome": "failure"
             },
-            "metricset.name": "service_destination",
+            "metricset": {
+                "name": "service_destination"
+            },
             "observer": {
                 "hostname": "dynamic",
                 "name": "instance-0000000000",
@@ -255,7 +299,9 @@
                         "resource": "dest_resource",
                         "response_time": {
                             "count": 1,
-                            "sum.us": 10220
+                            "sum": {
+                                "us": 10220
+                            }
                         }
                     }
                 }
@@ -275,6 +321,9 @@
                 "namespace": "migrated",
                 "type": "metrics"
             },
+            "ecs": {
+                "version": "dynamic"
+            },
             "event": {
                 "agent_id_status": "missing",
                 "ingested": "dynamic",
@@ -284,7 +333,9 @@
                 "hostname": "corduroy",
                 "name": "corduroy"
             },
-            "metricset.name": "transaction",
+            "metricset": {
+                "name": "transaction"
+            },
             "observer": {
                 "hostname": "dynamic",
                 "name": "instance-0000000000",
@@ -302,13 +353,15 @@
                 }
             },
             "transaction": {
-                "duration.histogram": {
-                    "counts": [
-                        1
-                    ],
-                    "values": [
-                        10239
-                    ]
+                "duration": {
+                    "histogram": {
+                        "counts": [
+                            1
+                        ],
+                        "values": [
+                            10239
+                        ]
+                    }
                 },
                 "name": "name",
                 "root": true,
@@ -329,6 +382,9 @@
                 "namespace": "migrated",
                 "type": "metrics"
             },
+            "ecs": {
+                "version": "dynamic"
+            },
             "event": {
                 "agent_id_status": "missing",
                 "ingested": "dynamic"
@@ -342,7 +398,9 @@
                     "platform": "linux"
                 }
             },
-            "metricset.name": "span_breakdown",
+            "metricset": {
+                "name": "span_breakdown"
+            },
             "observer": {
                 "hostname": "dynamic",
                 "name": "instance-0000000000",
@@ -350,9 +408,7 @@
                 "version": "dynamic"
             },
             "process": {
-                "args": [
-                    "/tmp/go-build1405913256/b001/exe/main"
-                ],
+                "args": "/tmp/go-build1405913256/b001/exe/main",
                 "parent": {
                     "pid": 4009763
                 },
@@ -380,7 +436,9 @@
             "span": {
                 "self_time": {
                     "count": 1,
-                    "sum.us": 15
+                    "sum": {
+                        "us": 15
+                    }
                 },
                 "type": "app"
             },
@@ -403,6 +461,9 @@
                 "namespace": "migrated",
                 "type": "metrics"
             },
+            "ecs": {
+                "version": "dynamic"
+            },
             "event": {
                 "agent_id_status": "missing",
                 "ingested": "dynamic"
@@ -416,7 +477,9 @@
                     "platform": "linux"
                 }
             },
-            "metricset.name": "span_breakdown",
+            "metricset": {
+                "name": "span_breakdown"
+            },
             "observer": {
                 "hostname": "dynamic",
                 "name": "instance-0000000000",
@@ -424,9 +487,7 @@
                 "version": "dynamic"
             },
             "process": {
-                "args": [
-                    "/tmp/go-build1405913256/b001/exe/main"
-                ],
+                "args": "/tmp/go-build1405913256/b001/exe/main",
                 "parent": {
                     "pid": 4009763
                 },
@@ -454,7 +515,9 @@
             "span": {
                 "self_time": {
                     "count": 1,
-                    "sum.us": 10220
+                    "sum": {
+                        "us": 10220
+                    }
                 },
                 "type": "type"
             },
