--- a/systemtest/approvals/TestOTLPGRPCMetrics.approved.json
+++ b/systemtest/approvals/TestOTLPGRPCMetrics.approved.json
@@ -6,14 +6,21 @@
                 "name": "otlp",
                 "version": "unknown"
             },
-            "data_stream.dataset": "apm.app.unknown",
-            "data_stream.namespace": "default",
-            "data_stream.type": "metrics",
+            "data_stream": {
+                "dataset": "apm.app.unknown",
+                "namespace": "default",
+                "type": "metrics"
+            },
+            "ecs": {
+                "version": "dynamic"
+            },
             "event": {
                 "agent_id_status": "missing",
                 "ingested": "dynamic"
             },
-            "metricset.name": "app",
+            "metricset": {
+                "name": "app"
+            },
             "observer": {
                 "hostname": "dynamic",
                 "type": "apm-server",
@@ -40,9 +47,14 @@
                 "name": "opentelemetry/go",
                 "version": "1.8.0"
             },
-            "data_stream.dataset": "apm.app.unknown_service_systemtest_test",
-            "data_stream.namespace": "default",
-            "data_stream.type": "metrics",
+            "data_stream": {
+                "dataset": "apm.app.unknown_service_systemtest_test",
+                "namespace": "default",
+                "type": "metrics"
+            },
+            "ecs": {
+                "version": "dynamic"
+            },
             "event": {
                 "agent_id_status": "missing",
                 "ingested": "dynamic"
@@ -62,7 +74,9 @@
                     10000
                 ]
             },
-            "metricset.name": "app",
+            "metricset": {
+                "name": "app"
+            },
             "observer": {
                 "hostname": "dynamic",
                 "type": "apm-server",
