--- a/systemtest/approvals/TestServiceMetricsAggregation.approved.json
+++ b/systemtest/approvals/TestServiceMetricsAggregation.approved.json
@@ -6,14 +6,21 @@
             "agent": {
                 "name": "go"
             },
-            "data_stream.dataset": "apm.internal",
-            "data_stream.namespace": "default",
-            "data_stream.type": "metrics",
+            "data_stream": {
+                "dataset": "apm.internal",
+                "namespace": "default",
+                "type": "metrics"
+            },
+            "ecs": {
+                "version": "dynamic"
+            },
             "event": {
                 "agent_id_status": "missing",
                 "ingested": "dynamic"
             },
-            "metricset.name": "service",
+            "metricset": {
+                "name": "service"
+            },
             "observer": {
                 "hostname": "dynamic",
                 "type": "apm-server",
@@ -27,9 +34,11 @@
                 "name": "systemtest"
             },
             "transaction": {
-                "duration.summary": {
-                    "sum": 2000000,
-                    "value_count": 2
+                "duration": {
+                    "summary": {
+                        "sum": 2000000,
+                        "value_count": 2
+                    }
                 },
                 "success_count": 2,
                 "type": "type1"
@@ -41,14 +50,21 @@
             "agent": {
                 "name": "go"
             },
-            "data_stream.dataset": "apm.internal",
-            "data_stream.namespace": "default",
-            "data_stream.type": "metrics",
+            "data_stream": {
+                "dataset": "apm.internal",
+                "namespace": "default",
+                "type": "metrics"
+            },
+            "ecs": {
+                "version": "dynamic"
+            },
             "event": {
                 "agent_id_status": "missing",
                 "ingested": "dynamic"
             },
-            "metricset.name": "service",
+            "metricset": {
+                "name": "service"
+            },
             "observer": {
                 "hostname": "dynamic",
                 "type": "apm-server",
@@ -62,9 +78,11 @@
                 "name": "systemtest"
             },
             "transaction": {
-                "duration.summary": {
-                    "sum": 2000000,
-                    "value_count": 2
+                "duration": {
+                    "summary": {
+                        "sum": 2000000,
+                        "value_count": 2
+                    }
                 },
                 "success_count": 2,
                 "type": "type2"
