--- a/apmpackage/apm/changelog.yml
+++ b/apmpackage/apm/changelog.yml
@@ -3,6 +3,9 @@
     - description: Enable synthetic source for metrics data streams
       type: enhancement
       link: https://github.com/elastic/apm-server/pull/9756
+    - description: Add `event.outcome_numeric`
+      type: enhancement
+      link: https://github.com/elastic/apm-server/pull/9764
 - version: "8.6.0"
   changes:
     - description: Change `ecs.version` to a `constant_keyword` field
