--- a/apmpackage/apm/data_stream/traces/elasticsearch/ingest_pipeline/default.yml
+++ b/apmpackage/apm/data_stream/traces/elasticsearch/ingest_pipeline/default.yml
@@ -15,6 +15,8 @@ processors:
       name: client_geoip
   - pipeline:
       name: event_duration
+  - pipeline:
+      name: event_outcome_numeric
   - remove:
       # Remove some metadata from spans that is available in the parent transaction, to cut down on storage costs.
       if: ctx.processor?.event == 'span'
