--- a/systemtest/approvals/TestFleetIntegration.approved.json
+++ b/systemtest/approvals/TestFleetIntegration.approved.json
@@ -12,7 +12,8 @@
             "event": {
                 "agent_id_status": "missing",
                 "ingested": "dynamic",
-                "outcome": "success"
+                "outcome": "success",
+                "outcome_numeric": 1
             },
             "host": {
                 "architecture": "i386",
