Add event.outcome_numeric for txmetrics and servicemetrics

--- a/apmpackage/apm/data_stream/internal_metrics/manifest.yml
+++ b/apmpackage/apm/data_stream/internal_metrics/manifest.yml
@@ -25,6 +25,12 @@ elasticsearch:
                   type: aggregate_metric_double
                   metrics: [sum, value_count]
                   default_metric: sum
+        event:
+          properties:
+            outcome_numeric:
+              type: aggregate_metric_double
+              metrics: [ sum, value_count ]
+              default_metric: sum
     settings:
       index:
         sort.field: "@timestamp"
