feat: store well defined metrics as times-series data streams
Remove index.sort.field for internal metrics:
illegal_argument_exception: [illegal_argument_exception] Reason: [index.mode=time_series]
is incompatible with [index.sort.field]

--- a/apmpackage/apm/data_stream/internal_metrics/fields/ecs.yml
+++ b/apmpackage/apm/data_stream/internal_metrics/fields/ecs.yml
@@ -56,6 +56,7 @@
   name: cloud.service.name
 - external: ecs
   name: container.id
+  dimension: true
 - external: ecs
   name: destination.address
 - external: ecs
@@ -74,6 +75,7 @@
   name: host.ip
 - external: ecs
   name: host.name
+  dimension: true
 - external: ecs
   name: host.os.platform
   index: false
