Add transaction metrics event.success_count

--- a/apmpackage/apm/data_stream/internal_metrics/manifest.yml
+++ b/apmpackage/apm/data_stream/internal_metrics/manifest.yml
@@ -29,6 +29,12 @@ elasticsearch:
               type: aggregate_metric_double
               metrics: [sum, value_count]
               default_metric: sum
+        event:
+          properties:
+            success_count:
+              type: aggregate_metric_double
+              metrics: [ sum, value_count ]
+              default_metric: sum
     settings:
       index:
         sort.field: "@timestamp"
