--- a/systemtest/approvals/TestTransactionAggregation.approved.json
+++ b/systemtest/approvals/TestTransactionAggregation.approved.json
@@ -17,7 +17,11 @@
             "event": {
                 "agent_id_status": "missing",
                 "ingested": "dynamic",
-                "outcome": "success"
+                "outcome": "success",
+                "success_count": {
+                    "sum": 5,
+                    "value_count": 5
+                }
             },
             "host": {
                 "hostname": "beowulf",
@@ -85,7 +89,11 @@
             "event": {
                 "agent_id_status": "missing",
                 "ingested": "dynamic",
-                "outcome": "success"
+                "outcome": "success",
+                "success_count": {
+                    "sum": 10,
+                    "value_count": 10
+                }
             },
             "host": {
                 "hostname": "beowulf",
